--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -26,7 +26,7 @@ a {
 }
 
 #root{
-  background-color: rgba(255, 224, 184, 0.523);
+  background-color: rgba(231, 184, 255, 0.541);
 }
 
 .App {
@@ -95,11 +95,16 @@ a {
   margin-bottom: 10px;
 }
 
-.filter-container input,
-select {
+.filter-container input {
   border: 1px solid;
   padding: 10px;
   margin: 10px;
+  border-radius: 5px;
+}
+
+select {
+  border: 1px solid;
+  padding: 10px;
   border-radius: 5px;
 }
 
@@ -162,7 +167,7 @@ select {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../src/assets/Images/image.png');
+  background-image: url('../src/assets/Images/image.jpg');
   background-size: cover;
 
   transition: 1.9s;
